--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Simple CLI to measure LOC distribution",
   "main": "index.js",
   "scripts": {
+    "prestart": "rimraf index.js",
+    "start": "babel src -d .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,5 +22,16 @@
   "bugs": {
     "url": "https://github.com/ashtonwar/avg-lines/issues"
   },
-  "homepage": "https://github.com/ashtonwar/avg-lines#readme"
+  "homepage": "https://github.com/ashtonwar/avg-lines#readme",
+  "devDependencies": {
+    "babel": "6.3.26",
+    "babel-cli": "6.4.5",
+    "babel-core": "6.4.5",
+    "babel-eslint": "4.1.6",
+    "babel-preset-es2015": "6.3.13",
+    "babel-preset-stage-0": "6.3.13",
+    "eslint": "1.10.3",
+    "eslint-config-airbnb": "4.0.0",
+    "rimraf": "2.5.1"
+  }
 }
