--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "avg-lines",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Simple CLI to measure LOC distribution",
   "main": "index.js",
   "bin": "logger.js",
   "preferGlobal": true,
   "scripts": {
     "prestart": "rimraf index.js",
-    "start": "babel src -d . && sed -i '0,/^/s@@#!\/bin\/env node\\n@' index.js",
+    "start": "babel src -d . && sed -i '0,/^/s@@#!/bin/env node\\n@' index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
