--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "preferGlobal": true,
   "scripts": {
     "prestart": "rimraf index.js",
-    "start": "babel src -d . && sed -i '0,/^/s@@#!/bin/env node\\n@' index.js",
+    "start": "babel src -d . && sed -i '0,/^/s@@#!/usr/bin/env node\\n@' logger.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
